# Spicy

./: .ghci  .gitignore  .travis.yml  CONTRIBUTING.md  README.md  Setup.hs  TODO.md  brittany.yaml  floskell.json  nohup.out  package-dev.yaml  package-release.yaml  package.yaml  pull_request_template.md  spicy.cabal  stack.yaml
app/: benchmarks.hs  spicy.hs  testing.hs
doc/: Spicy-Math-Internal.html  Spicy-Math.html  Spicy-MolWriter.html  Spicy-Molecule-Util.html  Spicy-Parser.html  Spicy-Types.html  Spicy-UnitTests-Data.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-D.html  doc-index-G.html  doc-index-I.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-R.html  doc-index-U.html  doc-index.json  spicy.txt
doc/haddock/: Spicy-MolWriter.html  Spicy-Molecule-Util.html  Spicy-Molecule.html  Spicy-Parser.html  Spicy-Types.html  Spicy-UnitTests-Data.html  Spicy-Wrapper-ORCA-Methods.html  doc-index-60.html  doc-index-All.html  doc-index-G.html  doc-index-H.html  doc-index-M.html  doc-index-U.html  doc-index-V.html  doc-index.json  spicy.txt
doc/src/: Paths_spicy.html  Spicy.Math.Internal.html  Spicy.Math.html  Spicy.MolWriter.html  Spicy.Molecule.Util.html  Spicy.Parser.html  Spicy.Types.html  Spicy.UnitTests.Data.html
docs/: Spicy-Data.html~HEAD  Spicy-Math-Internal.html  Spicy-Math.html  Spicy-Math.html~HEAD  Spicy-MolWriter.html  Spicy-Molecule-Util.html  Spicy-Parser.html  Spicy-Parser.html~HEAD  Spicy-Parser.html~master  Spicy-Types.html~master  Spicy-Wrapper-ORCA.html~HEAD  doc-index-95.html~HEAD  doc-index-A.html~master  doc-index-All.html~HEAD  doc-index-B.html  doc-index-C.html  doc-index-D.html~HEAD  doc-index-E.html  doc-index-F.html~HEAD  doc-index-G.html  doc-index-G.html~master  doc-index-I.html~HEAD  doc-index-K.html  doc-index-L.html  doc-index-M.html~HEAD  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-P.html~master  doc-index-R.html  doc-index-S.html~master  doc-index-T.html~master  doc-index-U.html~HEAD  doc-index-W.html  doc-index-X.html  doc-index-Y.html~HEAD  doc-index-Z.html  doc-index.json~HEAD  index.html  spicy.txt  (+2 more)
docs/haddock/: Spicy-Math-Helper.html  Spicy-Math.html  Spicy-MolWriter.html  Spicy-MolecularSystem.html  Spicy-Parser.html  Spicy-Types.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-F.html  doc-index-G.html  doc-index-L.html  doc-index-M.html  doc-index-P.html  (+9 more)
(+109 files in other folders)
