name: spicy
version: 0.0.1.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: Phillip Seeber
maintainer: phillip.seeber@uni-jena.de
homepage: https://github.com/sheepforce/Spicy
bug-reports: https://github.com/sheepforce/Spicy/issues
description:
    Please see the README on Github at <https://github.com/sheepforce/Spicy>
author: Phillip Seeber
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/sheepforce/hONIOM

library
    exposed-modules:
        Spicy.MolecularSystem
        Spicy.Types
        Spicy.Math
        Spicy.Parser
        Spicy.MolWriter
        Spicy.Wrapper
        Spicy.Wrapper.ORCA
        Spicy.Wrapper.ORCA.Methods
        Spicy.UnitTests.Data
    build-depends:
        base >=4.7 && <5,
        hmatrix >=0.18.0.0,
        containers >=0.5.7.1,
        microlens-platform >=0.3.9.0,
        attoparsec >=0.13.1.0,
        text >=1.2.2.0,
        process >=1.4.3.0,
        split >=0.2.3.2,
        deepseq >=1.4.2.0,
        parallel >=3.2.1.0,
        random >=1.1
    default-language: Haskell2010
    hs-source-dirs: src

executable spicy
    main-is: spicy.hs
    build-depends:
        base >=4.7 && <5,
        spicy -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

--executable spicy-tests
--    main-is: testing.hs
--    build-depends:
--        base >=4.7 && <5,
--        tasty >=0.11.3,
--        text >=1.2.2.0,
--        attoparsec >=0.13.1.0,
--        spicy -any,
--        either-unwrap >=1.1,
--        tasty-hunit -any,
--        hmatrix >=0.18.0.0,
--        tasty-golden >=2.3.1,
--        filepath >=1.4.2
--    default-language: Haskell2010
--    hs-source-dirs: app
--    ghc-options: -threaded -rtsopts -with-rtsopts=-N -static

test-suite spicy-unittests
    type: exitcode-stdio-1.0
    main-is: testing.hs
    build-depends:
        base >=4.7 && <5,
        tasty >=0.11.3,
        text >=1.2.2.0,
        attoparsec >=0.13.1.0,
        spicy -any,
        either-unwrap >=1.1,
        tasty-hunit -any,
        hmatrix >=0.18.0.0,
        tasty-golden >=2.3.1,
        filepath >=1.4.2,
        utf8-string >=1.0.1
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
